Set default network to 7, enable world phone, filter out LTE modes
Change-Id: I43dc037408072c2b62db48256f979d8702c257d6

--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -19,4 +19,6 @@
     <!-- Show enabled lte option for lte device -->
     <bool name="config_enabled_lte" translatable="false">false</bool>
 
+    <!-- Flag indicating if the phone is a world phone-->
+    <bool name="world_phone">true</bool>
 </resources>
